standardize preconditions and builder patterns