@@ -3,20 +3,50 @@ package org.camunda.migration.rewrite.recipes.client.migrate;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import org.camunda.migration.rewrite.recipes.utils.RecipeConstants;
 import org.camunda.migration.rewrite.recipes.utils.RecipeUtils;
+import org.openrewrite.ExecutionContext;
+import org.openrewrite.Preconditions;
+import org.openrewrite.TreeVisitor;
 import org.openrewrite.java.MethodMatcher;
+import org.openrewrite.java.search.UsesMethod;
+import org.openrewrite.java.search.UsesType;
 
 public class StartProcessInstanceMethodsRules {
 
-  static List<RecipeUtils.MethodInvocationSimpleReplacementSpec>
-      methodInvocationSimpleReplacementSpecs =
-          List.of(
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByKey(String processDefinitionKey)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+  static TreeVisitor<?, ExecutionContext> preconditions =
+      Preconditions.and(
+          Preconditions.or(
+              new UsesType<>(RecipeConstants.Type.PROCESS_ENGINE, true),
+              new UsesType<>(RecipeConstants.Type.RUNTIME_SERVICE, true)),
+          Preconditions.or(
+              new UsesMethod<>(
+                  RecipeConstants.Method.START_PROCESS_INSTANCE_BY_KEY
+                      + RecipeConstants.Parameters.ANY,
+                  true),
+              new UsesMethod<>(RecipeConstants.Method.CREATE_PROCESS_INSTANCE_BY_KEY, true),
+              new UsesMethod<>(
+                  RecipeConstants.Method.START_PROCESS_INSTANCE_BY_ID
+                      + RecipeConstants.Parameters.ANY,
+                  true),
+              new UsesMethod<>(RecipeConstants.Method.CREATE_PROCESS_INSTANCE_BY_ID, true),
+              new UsesMethod<>(
+                  RecipeConstants.Method.START_PROCESS_INSTANCE_BY_MESSAGE
+                      + RecipeConstants.Parameters.ANY,
+                  true),
+              new UsesMethod<>(
+                  RecipeConstants.Method.START_PROCESS_INSTANCE_BY_MESSAGE_AND_PROCESS_DEFINITION_ID
+                      + RecipeConstants.Parameters.ANY,
+                  true)));
+
+  static List<RecipeUtils.MethodInvocationSimpleReplacementSpec> simpleMethodInvocations =
+      List.of(
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByKey(String processDefinitionKey)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -24,18 +54,18 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionKey", 0)),
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByKey(String processDefinitionKey, String
-                      // businessKey)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String, java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionKey", 0)),
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByKey(String processDefinitionKey, String
+                  // businessKey)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String, java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -43,18 +73,18 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionKey", 0)),
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByKey(String processDefinitionKey, Map<String, Object>
-                      // variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionKey", 0)),
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByKey(String processDefinitionKey, Map<String, Object>
+                  // variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                    #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -63,20 +93,19 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                     """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionKey", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 1)),
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByKey(String processDefinitionKey, String businessKey,
-                      // Map<String, Object> variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String, java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionKey", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 1)),
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByKey(String processDefinitionKey, String businessKey,
+                  // Map<String, Object> variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String, java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                    #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -85,75 +114,53 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                     """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionKey", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 2)),
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceById(String processDefinitionId)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionKey", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceById(String processDefinitionId)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionId", 0)),
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceById(String processDefinitionId, String businessKey)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionId", 0)),
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceById(String processDefinitionId, String businessKey)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionId", 0)),
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceById(String processDefinitionId, Map<String, Object>
-                      // variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
-                  #{camundaClient:any(io.camunda.client.CamundaClient)}
-                      .newCreateInstanceCommand()
-                      .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
-                      .variables(#{variableMap:any(java.util.Map)})
-                      .send()
-                      .join();
-                  """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionId", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 1)),
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceById(String processDefinitionId, String businessKey,
-                      // Map<String, Object> variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionId", 0)),
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceById(String processDefinitionId, Map<String, Object>
+                  // variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCreateInstanceCommand()
                       .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
@@ -161,19 +168,38 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "processDefinitionId", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 2)),
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessage(String messageName)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionId", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 1)),
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceById(String processDefinitionId, String businessKey,
+                  // Map<String, Object> variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
+                  #{camundaClient:any(io.camunda.client.CamundaClient)}
+                      .newCreateInstanceCommand()
+                      .processDefinitionKey(Long.valueOf(#{processDefinitionId:any(String)}))
+                      .variables(#{variableMap:any(java.util.Map)})
+                      .send()
+                      .join();
+                  """),
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
+                      "processDefinitionId", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessage(String messageName)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                     .newCorrelateMessageCommand()
                     .messageName(#{messageName:any(String)})
@@ -181,17 +207,16 @@ public class StartProcessInstanceMethodsRules {
                     .send()
                     .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0)),
-                  List.of(" please configure you correlationKey")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessage(String messageName, String businessKey)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+              List.of(" please configure you correlationKey")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessage(String messageName, String businessKey)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                     .newCorrelateMessageCommand()
                     .messageName(#{messageName:any(String)})
@@ -199,18 +224,17 @@ public class StartProcessInstanceMethodsRules {
                     .send()
                     .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0)),
-                  List.of(" please configure you correlationKey", " businessKey was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessage(String messageName, Map<String, Object>
-                      // variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+              List.of(" please configure you correlationKey", " businessKey was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessage(String messageName, Map<String, Object>
+                  // variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCorrelateMessageCommand()
                       .messageName(#{messageName:any(String)})
@@ -219,20 +243,18 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 1)),
-                  List.of(" please configure you correlationKey")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessage(String messageName, String businessKey,
-                      // Map<String, Object> variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 1)),
+              List.of(" please configure you correlationKey")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessage(String messageName, String businessKey,
+                  // Map<String, Object> variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCorrelateMessageCommand()
                       .messageName(#{messageName:any(String)})
@@ -241,21 +263,19 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                           """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 2)),
-                  List.of(" please configure you correlationKey", " businessKey was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
-                      // String
-                      // processDefinitionId)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+              List.of(" please configure you correlationKey", " businessKey was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
+                  // String
+                  // processDefinitionId)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCorrelateMessageCommand()
                       .messageName(#{messageName:any(String)})
@@ -263,20 +283,18 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0)),
-                  List.of(
-                      " please configure you correlationKey", " processDefinitionId was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
-                      // String
-                      // processDefinitionId, String businessKey)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String, java.lang.String)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+              List.of(" please configure you correlationKey", " processDefinitionId was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
+                  // String
+                  // processDefinitionId, String businessKey)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String, java.lang.String)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCorrelateMessageCommand()
                       .messageName(#{messageName:any(String)})
@@ -284,22 +302,21 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0)),
-                  List.of(
-                      " please configure you correlationKey",
-                      " businessKey was removed",
-                      " processDefinitionId was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
-                      // String
-                      // processDefinitionId, Map<String, Object> variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+              List.of(
+                  " please configure you correlationKey",
+                  " businessKey was removed",
+                  " processDefinitionId was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
+                  // String
+                  // processDefinitionId, Map<String, Object> variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCorrelateMessageCommand()
                       .messageName(#{messageName:any(String)})
@@ -308,23 +325,20 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 2)),
-                  List.of(
-                      " please configure you correlationKey", " processDefinitionId was removed")),
-              new RecipeUtils.MethodInvocationSimpleReplacementSpec(
-                  new MethodMatcher(
-                      // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
-                      // String
-                      // processDefinitionId, String businessKey, Map<String, Object>
-                      // variableMap)"
-                      "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String, java.lang.String, java.util.Map)"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+              List.of(" please configure you correlationKey", " processDefinitionId was removed")),
+          new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+              new MethodMatcher(
+                  // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
+                  // String
+                  // processDefinitionId, String businessKey, Map<String, Object>
+                  // variableMap)"
+                  "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(java.lang.String, java.lang.String, java.lang.String, java.util.Map)"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                   #{camundaClient:any(io.camunda.client.CamundaClient)}
                       .newCorrelateMessageCommand()
                       .messageName(#{messageName:any(String)})
@@ -333,27 +347,24 @@ public class StartProcessInstanceMethodsRules {
                       .send()
                       .join();
                   """),
-                  "io.camunda.client.api.response.CorrelateMessageResponse",
-                  List.of(
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "messageName", 0),
-                      new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                          "variableMap", 3)),
-                  List.of(
-                      " please configure you correlationKey",
-                      " businessKey was removed",
-                      " processDefinitionId was removed")));
+              "io.camunda.client.api.response.CorrelateMessageResponse",
+              List.of(
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
+                  new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 3)),
+              List.of(
+                  " please configure you correlationKey",
+                  " businessKey was removed",
+                  " processDefinitionId was removed")));
 
-  static List<RecipeUtils.MethodInvocationBuilderReplacementSpec>
-      methodInvocationBuilderReplacementSpecs =
-          List.of(
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey"),
-                  List.of("createProcessInstanceByKey"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+  static List<RecipeUtils.MethodInvocationBuilderReplacementSpec> builderMethodInvocations =
+      List.of(
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey"),
+              List.of("createProcessInstanceByKey"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -361,15 +372,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey", "businessKey"),
-                  List.of("createProcessInstanceByKey"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey", "businessKey"),
+              List.of("createProcessInstanceByKey"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -377,49 +388,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey", "processDefinitionTenantId"),
-                  List.of("createProcessInstanceByKey", "processDefinitionTenantId"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
-                      #{camundaClient:any(io.camunda.client.CamundaClient)}
-                          .newCreateInstanceCommand()
-                          .bpmnProcessId(#{processDefinitionId:any(String)})
-                          .latestVersion()
-                          .tenantId(#{tenantId:any(String)})
-                          .send()
-                          .join();
-                      """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey", "setVariables"),
-                  List.of("createProcessInstanceByKey", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
-                      #{camundaClient:any(io.camunda.client.CamundaClient)}
-                          .newCreateInstanceCommand()
-                          .bpmnProcessId(#{processDefinitionId:any(String)})
-                          .latestVersion()
-                          .variables(#{variableMap:any(java.util.Map)})
-                          .send()
-                          .join();
-                      """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "businessKey"),
-                  List.of("createProcessInstanceByKey", "processDefinitionTenantId"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey", "processDefinitionTenantId"),
+              List.of("createProcessInstanceByKey", "processDefinitionTenantId"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -428,15 +405,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey", "setVariables", "businessKey"),
-                  List.of("createProcessInstanceByKey", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey", "setVariables"),
+              List.of("createProcessInstanceByKey", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -445,39 +422,49 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
-                  List.of(
-                      "createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "businessKey"),
+              List.of("createProcessInstanceByKey", "processDefinitionTenantId"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .bpmnProcessId(#{processDefinitionId:any(String)})
                           .latestVersion()
                           .tenantId(#{tenantId:any(String)})
+                          .send()
+                          .join();
+                      """),
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey", "setVariables", "businessKey"),
+              List.of("createProcessInstanceByKey", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
+                      #{camundaClient:any(io.camunda.client.CamundaClient)}
+                          .newCreateInstanceCommand()
+                          .bpmnProcessId(#{processDefinitionId:any(String)})
+                          .latestVersion()
                           .variables(#{variableMap:any(java.util.Map)})
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of(
-                      "createProcessInstanceByKey",
-                      "processDefinitionTenantId",
-                      "setVariables",
-                      "businessKey"),
-                  List.of(
-                      "createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
+              List.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .bpmnProcessId(#{processDefinitionId:any(String)})
@@ -487,45 +474,67 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById"),
-                  List.of("createProcessInstanceById"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of(
+                  "createProcessInstanceByKey",
+                  "processDefinitionTenantId",
+                  "setVariables",
+                  "businessKey"),
+              List.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
+                      #{camundaClient:any(io.camunda.client.CamundaClient)}
+                          .newCreateInstanceCommand()
+                          .bpmnProcessId(#{processDefinitionId:any(String)})
+                          .latestVersion()
+                          .tenantId(#{tenantId:any(String)})
+                          .variables(#{variableMap:any(java.util.Map)})
+                          .send()
+                          .join();
+                      """),
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById"),
+              List.of("createProcessInstanceById"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById", "businessKey"),
-                  List.of("createProcessInstanceById"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById", "businessKey"),
+              List.of("createProcessInstanceById"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById", "processDefinitionTenantId"),
-                  List.of("createProcessInstanceById", "processDefinitionTenantId"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById", "processDefinitionTenantId"),
+              List.of("createProcessInstanceById", "processDefinitionTenantId"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
@@ -533,15 +542,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById", "setVariables"),
-                  List.of("createProcessInstanceById", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById", "setVariables"),
+              List.of("createProcessInstanceById", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
@@ -549,15 +558,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById", "processDefinitionTenantId", "businessKey"),
-                  List.of("createProcessInstanceById", "processDefinitionTenantId"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById", "processDefinitionTenantId", "businessKey"),
+              List.of("createProcessInstanceById", "processDefinitionTenantId"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
@@ -565,15 +574,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById", "setVariables", "businessKey"),
-                  List.of("createProcessInstanceById", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById", "setVariables", "businessKey"),
+              List.of("createProcessInstanceById", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
@@ -581,36 +590,15 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
-                  List.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
-                      #{camundaClient:any(io.camunda.client.CamundaClient)}
-                          .newCreateInstanceCommand()
-                          .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
-                          .tenantId(#{tenantId:any(String)})
-                          .variables(#{variableMap:any(java.util.Map)})
-                          .send()
-                          .join();
-                      """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  Collections.emptyList()),
-              new RecipeUtils.MethodInvocationBuilderReplacementSpec(
-                  new MethodMatcher(
-                      "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute()"),
-                  Set.of(
-                      "createProcessInstanceById",
-                      "processDefinitionTenantId",
-                      "setVariables",
-                      "businessKey"),
-                  List.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
-                  RecipeUtils.createSimpleJavaTemplate(
-                      """
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
+              List.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
                       #{camundaClient:any(io.camunda.client.CamundaClient)}
                           .newCreateInstanceCommand()
                           .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
@@ -619,6 +607,27 @@ public class StartProcessInstanceMethodsRules {
                           .send()
                           .join();
                       """),
-                  "io.camunda.client.api.response.ProcessInstanceEvent",
-                  List.of(" businessKey was removed")));
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              Collections.emptyList()),
+          new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+              new MethodMatcher(
+                  "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)"),
+              Set.of(
+                  "createProcessInstanceById",
+                  "processDefinitionTenantId",
+                  "setVariables",
+                  "businessKey"),
+              List.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
+              RecipeUtils.createSimpleJavaTemplate(
+                  """
+                      #{camundaClient:any(io.camunda.client.CamundaClient)}
+                          .newCreateInstanceCommand()
+                          .processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(String)}))
+                          .tenantId(#{tenantId:any(String)})
+                          .variables(#{variableMap:any(java.util.Map)})
+                          .send()
+                          .join();
+                      """),
+              "io.camunda.client.api.response.ProcessInstanceEvent",
+              List.of(" businessKey was removed")));
 }
